# exceptiongroup

./: .gitignore  .pre-commit-config.yaml  CHANGES.rst  LICENSE  README.rst  SECURITY.md  pyproject.toml  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.yaml
.github/workflows/: publish.yml  test.yml
src/exceptiongroup/: __init__.py  _catch.py  _exceptions.py  _formatting.py  _suppress.py
tests/: apport_excepthook.py  check_types.py  dummyscript.py  test_apport_monkeypatching.py  test_catch.py  test_catch_py311.py  test_exceptiongroup.py  test_exceptions.py  test_formatting.py  type_test.py
